# backend

./: .gitignore  crear_productos.py  flake.nix  pyproject.toml  requirements.txt
config/: settings.py  urls.py
tienda/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
tienda/migrations/: 0001_initial.py  0002_alter_producto_options_alter_usuario_options_and_more.py  0003_producto_marca_producto_talla.py  0004_pedido.py  0005_alter_pedido_direccion_alter_pedido_email_and_more.py  0006_alter_pedido_estado.py
tienda/templates/labores/: crear_labor.html  editar_labor.html  eliminar_labor.html  listar_labores.html
tienda/templates/tareas/: editar_tarea.html  eliminar_tarea.html  listar_tareas.html
