[project]
name = "impure-package"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "django==5.2.6",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "idna==3.11",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.10.1",
    "requests==2.32.5",
    "sqlparse==0.5.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
